# deppenklopfer-be

./: .gitignore  CLAUDE.md  Makefile  README.md  deppenklopfer.db  pyproject.toml  start_server.sh
app/: __init__.py  config.py  main.py
app/api/: __init__.py  auth.py  deps.py  tables.py  users.py  ws.py  ws_game.py  ws_state.py
app/db/: session.py
app/models/: __init__.py  entities.py
app/schemas/: __init__.py  dto.py
app/services/: hand_service.py  schafkopf_rules.py  schafkopf_scoring.py  security.py  table_codes.py  ws_manager.py
docs/: open_issues.md  schafkopf_rules.md
